--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'org.apache.httpcomponents:httpcore:4.3.2'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'com.jjoe64:graphview:4.2.1'
 }
