--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 11 22:21:41 CET 2018
-sdk.dir=/home/kirahvi/Android/Sdk
+#Fri Jan 12 00:13:46 CET 2018
+sdk.dir=C\:\\Users\\Maciej\\AppData\\Local\\Android\\Sdk
